--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,7 @@ jobs:
 
     # Build the Docker image
     - name: Build Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-app:${{ github.sha }} .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/nginx-sample:${{ github.sha }} .
 
     # Push the Docker image to Docker Hub
     - name: Push Docker image
